Mechanical Sonar sweep: try-with-resources, unnamed patterns, Stream.toList() (#3366)
* oshi-core-ffm: try-with-resources in CoreFoundationTest (Sonar S2093)

CFTypeRef and its subclasses (CFStringRef/CFNumberRef/CFArrayRef/etc.) all
implement AutoCloseable with close() = release(), so the manual
try-finally cleanup pattern can be replaced with try-with-resources.

19 sites converted across the test methods; also folded a few
not-Sonar-flagged but identical patterns in testCFLocaleCopyCurrent and
testCFDateFormatterGetFormat for consistency. testCFStringCastCheckRejectsNonString
gets the same treatment by wrapping the test segment in a CFNumberRef (it's
a valid CFNumber by construction) so the cleanup rides on try-with-resources;
the actual assertThrows still verifies that the CFStringRef cast rejects the
non-string segment.

CoreFoundationTest passes on macOS / JDK 25+.

* oshi-core-ffm: unnamed pattern in unused catch params (Sonar S7467)

Java 21 unnamed patterns (JEP 443/456) let unused catch parameters be
written as `_` instead of an invented name like `e` or `ignored`. 46 sites
across oshi-core-ffm where the catch body never references the exception:

    } catch (Throwable t) {       ->   } catch (Throwable _) {
    } catch (Exception ignored) { ->   } catch (Exception _) {

Includes one multi-catch line continuation in
WmiQueryHandlerFFM.createInstance() the bulk script didn't catch.
No behaviour change.

* oshi-core-ffm,oshi-benchmark: Stream.toList() (Sonar S6204)

Replace `.collect(Collectors.toList())` with `.toList()` (Java 16+). The
new form is shorter and consistent with the rest of the codebase.

The returned list is unmodifiable, whereas Collectors.toList() returned
an ArrayList in practice. Both are spec-compliant — the Collectors.toList
docs explicitly disclaim mutability guarantees — and no internal caller
mutates the returned list. (The equivalent JNA-side files predate
SonarCloud's new-code window so weren't flagged; same change there is a
foll