@@ -19,7 +19,6 @@ import java.util.Map;
 import java.util.Map.Entry;
 import java.util.Set;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 
 import oshi.annotation.concurrent.ThreadSafe;
 import oshi.driver.common.unix.aix.Uptime;
@@ -112,14 +111,14 @@ public final class AixOperatingSystemFFM extends AbstractOperatingSystem {
     public List<OSProcess> queryChildProcesses(int parentPid) {
         List<OSProcess> allProcs = queryAllProcesses();
         Set<Integer> descendantPids = getChildrenOrDescendants(allProcs, parentPid, false);
-        return allProcs.stream().filter(p -> descendantPids.contains(p.getProcessID())).collect(Collectors.toList());
+        return allProcs.stream().filter(p -> descendantPids.contains(p.getProcessID())).toList();
     }
 
     @Override
     public List<OSProcess> queryDescendantProcesses(int parentPid) {
         List<OSProcess> allProcs = queryAllProcesses();
         Set<Integer> descendantPids = getChildrenOrDescendants(allProcs, parentPid, true);
-        return allProcs.stream().filter(p -> descendantPids.contains(p.getProcessID())).collect(Collectors.toList());
+        return allProcs.stream().filter(p -> descendantPids.contains(p.getProcessID())).toList();
     }
 
     @Override
@@ -152,7 +151,7 @@ public final class AixOperatingSystemFFM extends AbstractOperatingSystem {
     public int getProcessId() {
         try {
             return AixLibcFunctions.getpid();
-        } catch (Throwable t) {
+        } catch (Throwable _) {
             return 0;
         }
     }
@@ -166,7 +165,7 @@ public final class AixOperatingSystemFFM extends AbstractOperatingSystem {
     public int getThreadId() {
         try {
             return AixLibcFunctions.thread_self();
-        } catch (Throwable t) {
+        } catch (Throwable _) {
             return 0;
         }
     }
